updated example site

--- a/site/_config.yaml
+++ b/site/_config.yaml
@@ -1,4 +1,4 @@
-title: "Slartibartfast"
-description: "A tiny, fast static site generator."
+title: "TechBlog"
+description: "Cutting-edge insights on technology, development, and innovation."
 base_url: "https://slartibartfast.example.com"
 theme: "default"
